k8s/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-demo-fe-service
  namespace: demo
spec:
  selector:
    app: argo-rollouts-demo-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-demo-be-service
  namespace: demo
spec:
  selector:
    app: argo-rollouts-demo-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-demo-fe-service-external
  namespace: ingress-nginx  # This must match the namespace where your Ingress exists
spec:
  type: ExternalName
  externalName: argo-rollouts-demo-fe-service.demo.svc.cluster.local
